# advent-of-code

./: .gitignore  .linkspector-github.yml  .linkspector.yml  .markdown-link-check.config.json  .shellcheckrc  Dockerfile  README.md  get-input.sh  languages.md  run_tests.sh  test-ci.sh  test-solutions.sh  test-templates.sh
2015/: README.md  day-03-vim  day-05  day-06-vim  day-08-vim  test.sh
2016/: README.md  day-01-vim  day-02-vim  day-03-vim  day-06-vim  day-08-vim  day-15-vim
2016/day-13-cpp/: CMakeLists.txt  README.md  build-ci.sh  run.sh  test-ci.sh
2016/day-13-cpp/src/: aoc.cpp  main.cpp
2016/day-13-cpp/tests/: aoc_tests.cpp
2017/: README.md  day-02-vim  day-05-vim
2020-rust/: Cargo.toml  README.md  main.sh  test-ci.sh
2020-rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  lib.rs  main.rs
2021-python/: README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day12.py  day13.py  day14.py  day15.py  day16.py  day20.py  day21.py  day22.py  day24.fish  day24.py  day25.py  input.py  run.bat  run.sh  test-ci.sh
2022/: README.md  day-01-vim  day-02-vim  day-03-vim  languages.md
2023/: README.md  day-01-vim  day-02-vim  day-03-vim  day-04-vim  test.sh
2024/: README.md  day-01-vim
2025/: README.md
codyssi/: README.md
i18n-puzzles/: README.md
templates/ocaml/: aoc.opam  build-ci.sh  dune-project  run.sh  test.sh
templates/ocaml/lib/: aoc.ml
templates/ocaml/test/: dune  test_aoc.ml
(+1227 files in other folders)
