[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Frank Blendinger <fb@zogan.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
partial_application = "0.2.1"
urlencoding = "1.1.1"
lazy_static = "1.4"
